Some changes are maded

--- a/src/styles/CollectionSectionStyle.css
+++ b/src/styles/CollectionSectionStyle.css
@@ -87,7 +87,9 @@
     overflow: hidden;
     height: 100%;
 }
-
+.about-us-img{
+    object-fit: cover;
+}
 .collection-info{
     position: absolute;
     display: flex;
