--- a/src/styles/videoStyle.css
+++ b/src/styles/videoStyle.css
@@ -43,13 +43,15 @@
     width: max-content;
 }
 .video-wrapper-content button{
+    all: unset;
     display: flex;
     align-items: center;
     justify-content: center;
 
     border: none;
     font-size: 20px;
-    background-color: white;
+    background-color: white  !important;
+    color: black !important;
     font-weight: 100;
     letter-spacing: 1px;
     padding: 20px;
