--- a/src/styles/CollectionSectionStyle.css
+++ b/src/styles/CollectionSectionStyle.css
@@ -6,8 +6,14 @@
     height: auto;
     width: 100%;
     padding: 48px;
+    opacity: 0;
+    transform: translateY(60px);
+    transition: opacity 0.3s ease-in-out, transform 0.8s ease-in-out;
 }
-
+.our-collection-section.show{
+    transform: translateY(0);
+    opacity: 1;
+}
 .collection-content{
     display: flex;
     flex-direction: column;
