--- a/src/styles/LocationSectionStyle.css
+++ b/src/styles/LocationSectionStyle.css
@@ -4,6 +4,13 @@
     align-items: center;
     justify-content: flex-start;
     height: 100vh;
+    opacity: 0;
+    transform: translateY(60px);
+    transition: opacity 0.6s ease-in-out, transform 0.8s ease-in-out;
+}
+.location-section.show{
+    transform: translateY(0);
+    opacity: 1;
 }
 .loc-section-header{
     display: flex;
