Some changes are maded

--- a/src/styles/headerStyle.css
+++ b/src/styles/headerStyle.css
@@ -37,7 +37,11 @@
 
 
 @media (max-width: 768px) {
+    .header-section{
+        height: 100px;
+    }
     .header-content {
         flex-direction: column;
+        gap: 15px;
     }
 }
