--- a/src/styles/videoStyle.css
+++ b/src/styles/videoStyle.css
@@ -77,6 +77,6 @@
             display: block;
             width: 100%;
             height: 100%;
-            object-fit: contain     ;
+            object-fit: fill;
         }
 }
